--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>Ecommerce App</title>
   </head>
-  <body>
+  <body style=" overflow-x: hidden; overflow-y: scroll; " >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" ></div>
     <!--
